cmss/e-forms/objects/Migration_Process__mdt/fields/All_DMS_Document_IDs__c.field-meta.xml
<CustomField>
    <fullName>All_DMS_Document_IDs__c</fullName>
    <label>All DMS Document ID&apos;s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>