cmss/e-forms/objects/Migration_Process__mdt/fields/Asset_From_Case__c.field-meta.xml
<CustomField>
    <fullName>Asset_From_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, product from Case field &apos;Aktivum&apos; is loaded to PCF as product</description>
    <label>Asset From Case</label>
    <type>Checkbox</type>
</CustomField>