cmss/e-forms/objects/Migration_Process__mdt/fields/Assets_In_Migration_Data_ID__c.field-meta.xml
<CustomField>
    <fullName>Assets_In_Migration_Data_ID__c</fullName>
    <description>Data ID of Product2 which are a subject of migration</description>
    <label>Assets In Migration Data ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>