cmss/e-forms/objects/Migration_Process__mdt/fields/Assign_To_User__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign To User For Draft Status</label>
    <type>Checkbox</type>
</CustomField>