cmss/e-forms/objects/Migration_Process__mdt/fields/At_Least_One_Attachment_Is_Required__c.field-meta.xml
<CustomField>
    <fullName>At_Least_One_Attachment_Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>At Least One Attachment Is Required</label>
    <type>Checkbox</type>
</CustomField>