cmss/e-forms/objects/Migration_Process__mdt/fields/Blacklisted_Products__c.field-meta.xml
<CustomField>
    <fullName>Blacklisted_Products__c</fullName>
    <label>Blacklisted Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>