cmss/e-forms/objects/Migration_Process__mdt/fields/Button_Generate_Label__c.field-meta.xml
<CustomField>
    <fullName>Button_Generate_Label__c</fullName>
    <label>Button Generate Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>