cmss/e-forms/objects/Migration_Process__mdt/fields/Case_Go_To_Framework_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Case_Go_To_Framework_Button_Label__c</fullName>
    <description>Nazev tlacitka na case detail page, ktere prepne do koknfiguracniho frameworku</description>
    <label>Case Go To Framework Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>