cmss/e-forms/objects/Migration_Process__mdt/fields/Case_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Queue_Name__c</fullName>
    <description>Nazev fronty (devname), ktera bude u vytvoreneho case z PCF vlastnikem.</description>
    <label>Case Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>