cmss/e-forms/objects/Migration_Process__mdt/fields/Case_Sent_Message__c.field-meta.xml
<CustomField>
    <fullName>Case_Sent_Message__c</fullName>
    <description>Zpráva, kterou framework zobrazí po odeslání servisu ke zpracování.</description>
    <label>Case Sent Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>