cmss/e-forms/objects/Migration_Process__mdt/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <description>Value of &quot;Status&quot; for newly created Case on the end of migration</description>
    <label>Case Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>