cmss/e-forms/objects/Migration_Process__mdt/fields/Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>Case_Subject__c</fullName>
    <description>Value of &quot;Subject&quot; for newly created Case on the end of migration</description>
    <label>Case Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>