cmss/e-forms/objects/Migration_Process__mdt/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>Value of &quot;Type&quot; for newly created Case on the end of migration</description>
    <label>Case Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>