cmss/e-forms/objects/Migration_Process__mdt/fields/Configuration_Subtab_EN_Label__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Subtab_EN_Label__c</fullName>
    <label>Configuration Subtab EN Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>