cmss/e-forms/objects/Migration_Process__mdt/fields/Configuration_Tab_CZ_Label__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Tab_CZ_Label__c</fullName>
    <label>Configuration Tab CZ Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>