cmss/e-forms/objects/Migration_Process__mdt/fields/Default_Selected_Products__c.field-meta.xml
<CustomField>
    <fullName>Default_Selected_Products__c</fullName>
    <label>Default Selected Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>