cmss/e-forms/objects/Migration_Process__mdt/fields/DMS_Document_Type_Data_ID__c.field-meta.xml
<CustomField>
    <fullName>DMS_Document_Type_Data_ID__c</fullName>
    <label>DMS Document Type Data ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>