cmss/e-forms/objects/Migration_Process__mdt/fields/Do_Not_Create_a_Case__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Create_a_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Create a Case</label>
    <type>Checkbox</type>
</CustomField>