cmss/e-forms/objects/Migration_Process__mdt/fields/Hide_Remove_Buttons__c.field-meta.xml
<CustomField>
    <fullName>Hide_Remove_Buttons__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Remove Buttons</label>
    <type>Checkbox</type>
</CustomField>