cmss/e-forms/objects/Migration_Process__mdt/fields/Hide_Transition_Subtab__c.field-meta.xml
<CustomField>
    <fullName>Hide_Transition_Subtab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Transition Subtab</label>
    <type>Checkbox</type>
</CustomField>