cmss/e-forms/objects/Migration_Process__mdt/fields/Icon_Path__c.field-meta.xml
<CustomField>
    <fullName>Icon_Path__c</fullName>
    <description>The most important part of the migration! Icon in the header! The path is from the AccountMainPageIcon2 static resource</description>
    <label>Icon Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>