cmss/e-forms/objects/Migration_Process__mdt/fields/Load_Parent_Product_Config__c.field-meta.xml
<CustomField>
    <fullName>Load_Parent_Product_Config__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Load Parent Product Config</label>
    <type>Checkbox</type>
</CustomField>