cmss/e-forms/objects/Migration_Process__mdt/fields/New_Product_Button_SOQL__c.field-meta.xml
<CustomField>
    <fullName>New_Product_Button_SOQL__c</fullName>
    <description>SOQL which is applied under the button &quot;Add product&quot;</description>
    <label>New Product Button SOQL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>