cmss/e-forms/objects/Migration_Process__mdt/fields/New_Subproduct_Button_SOQL__c.field-meta.xml
<CustomField>
    <fullName>New_Subproduct_Button_SOQL__c</fullName>
    <description>SOQL which is applied under the button/sumbol of card &quot;Add card&quot; on the specific product/asset in the left sidebar</description>
    <label>New Subproduct Button SOQL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>