cmss/e-forms/objects/Migration_Process__mdt/fields/Overview_Tab_EN_Label__c.field-meta.xml
<CustomField>
    <fullName>Overview_Tab_EN_Label__c</fullName>
    <label>Overview Tab EN Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>