cmss/e-forms/objects/Migration_Process__mdt/fields/Print_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Print_Button_Label__c</fullName>
    <label>Print Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>