cmss/e-forms/objects/Migration_Process__mdt/fields/Product_Relation_Config_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Relation_Config_Record_Type_Name__c</fullName>
    <label>Product Relation Config Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>