cmss/e-forms/objects/Migration_Process__mdt/fields/Product_Relation_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Relation_Record_Type__c</fullName>
    <label>Product Relation Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>