cmss/e-forms/objects/Migration_Process__mdt/fields/Representative_Relation_ID__c.field-meta.xml
<CustomField>
    <fullName>Representative_Relation_ID__c</fullName>
    <label>Representative Relation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>