cmss/e-forms/objects/Migration_Process__mdt/fields/Required_DMS_Document_IDs__c.field-meta.xml
<CustomField>
    <fullName>Required_DMS_Document_IDs__c</fullName>
    <label>Required DMS Document ID&apos;s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>