cmss/e-forms/objects/Migration_Process__mdt/fields/Save_for_Later__c.field-meta.xml
<CustomField>
    <fullName>Save_for_Later__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save for Later</label>
    <type>Checkbox</type>
</CustomField>