cmss/e-forms/objects/Migration_Process__mdt/fields/Selected_Tab_Default__c.field-meta.xml
<CustomField>
    <fullName>Selected_Tab_Default__c</fullName>
    <label>Selected Tab Default</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transactions</fullName>
                <default>true</default>
                <label>Transactions</label>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>