cmss/e-forms/objects/Migration_Process__mdt/fields/Sent_OutputType__c.field-meta.xml
<CustomField>
    <fullName>Sent_OutputType__c</fullName>
    <description>OutputType dle Cap Gemini.
Default: 80 
(when not filled, 80 is sent)</description>
    <inlineHelpText>OutputType dle Cap Gemini.
Default: 80 
(when not filled, 80 is sent)</inlineHelpText>
    <label>Sent OutputType</label>
    <type>TextArea</type>
</CustomField>