cmss/e-forms/objects/Migration_Process__mdt/fields/Show_File_Selector__c.field-meta.xml
<CustomField>
    <fullName>Show_File_Selector__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show File Selector</label>
    <type>Checkbox</type>
</CustomField>