cmss/e-forms/objects/Migration_Process__mdt/fields/Show_FO_Products_on_FOP__c.field-meta.xml
<CustomField>
    <fullName>Show_FO_Products_on_FOP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show FO Products on FOP</label>
    <type>Checkbox</type>
</CustomField>