cmss/e-forms/objects/Migration_Process__mdt/fields/Show_FOP_Products_on_FO__c.field-meta.xml
<CustomField>
    <fullName>Show_FOP_Products_on_FO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show FOP Products on FO</label>
    <type>Checkbox</type>
</CustomField>