cmss/e-forms/objects/Migration_Process__mdt/fields/Show_General_Subtab__c.field-meta.xml
<CustomField>
    <fullName>Show_General_Subtab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show General Subtab</label>
    <type>Checkbox</type>
</CustomField>