cmss/e-forms/objects/Migration_Process__mdt/fields/Show_KC_Authenticator__c.field-meta.xml
<CustomField>
    <fullName>Show_KC_Authenticator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show KC Authenticator</label>
    <type>Checkbox</type>
</CustomField>