cmss/e-forms/objects/Migration_Process__mdt/fields/Store_Last_Generated_Doc_To_JSK_OnSubmit__c.field-meta.xml
<CustomField>
    <fullName>Store_Last_Generated_Doc_To_JSK_OnSubmit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Last Generated Doc To JSK OnSubmit</label>
    <type>Checkbox</type>
</CustomField>