cmss/e-forms/objects/Migration_Process__mdt/fields/Title_CZ__c.field-meta.xml
<CustomField>
    <fullName>Title_CZ__c</fullName>
    <description>CZ Title in the Header, tab title of the migration</description>
    <label>Title CZ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>