cmss/e-forms/objects/Migration_Process__mdt/fields/Title_EN__c.field-meta.xml
<CustomField>
    <fullName>Title_EN__c</fullName>
    <description>EN Title in the Header, tab title of the migration</description>
    <label>Title EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>