cmss/e-forms/objects/Migration_Process__mdt/fields/Transition_Subtab_CZ_Label__c.field-meta.xml
<CustomField>
    <fullName>Transition_Subtab_CZ_Label__c</fullName>
    <label>Transition Subtab CZ Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>