cmss/e-forms/objects/Migration_Process__mdt/fields/Use_Already_Created_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Already_Created_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Already Created Case</label>
    <type>Checkbox</type>
</CustomField>