cmss/e-forms/objects/Migration_Process__mdt/fields/Use_Preterm_Document_List__c.field-meta.xml
<CustomField>
    <fullName>Use_Preterm_Document_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Preterm Document List</label>
    <type>Checkbox</type>
</CustomField>