cmss/e-forms/objects/Migration_Process__mdt/validationRules/No_Branch_and_Queue_together.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Branch_and_Queue_together</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Case_Branch_Data_Id__c)),NOT(ISBLANK( Case_Queue_Name__c )))</errorConditionFormula>
    <errorMessage>Nesmí být vyplněno zároveň Case_Branch_Data_Id a Case_Queue_Name.</errorMessage>
</ValidationRule>